--- a/app/src/main/res/layout/activity_main_register.xml
+++ b/app/src/main/res/layout/activity_main_register.xml
@@ -34,7 +34,7 @@
         android:textColor="#000000"
         android:textSize="20sp"
         android:translationX="-130dp"
-        android:translationY="130dp" />
+        android:translationY="230dp" />
 
     <FrameLayout
         android:layout_width="180dp"
@@ -42,7 +42,7 @@
         android:animateLayoutChanges="false"
         android:background="#6DF870"
         android:translationX="-120dp"
-        android:translationY="120dp">
+        android:translationY="220dp">
 
         <FrameLayout
             android:layout_width="164dp"
@@ -69,18 +69,6 @@
 
     </FrameLayout>
 
-    <Button
-        android:id="@+id/id_confirm"
-        android:layout_width="110dp"
-        android:layout_height="70dp"
-        android:layout_weight="0"
-        android:backgroundTint="#6DF870"
-        android:text="중복확인"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:translationX="-110dp"
-        android:translationY="130dp" />
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="87dp"
@@ -90,8 +78,8 @@
         android:textAlignment="textStart"
         android:textColor="#000000"
         android:textSize="20sp"
-        android:translationX="-490dp"
-        android:translationY="210dp" />
+        android:translationX="-380dp"
+        android:translationY="310dp" />
 
     <FrameLayout
         android:layout_width="180dp"
@@ -99,8 +87,8 @@
         android:layout_weight="0"
         android:animateLayoutChanges="false"
         android:background="#6DF870"
-        android:translationX="-495dp"
-        android:translationY="205dp">
+        android:translationX="-387dp"
+        android:translationY="305dp">
 
         <FrameLayout
             android:layout_width="164dp"
@@ -129,61 +117,15 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="117dp"
+        android:layout_width="73dp"
         android:layout_height="45dp"
-        android:layout_weight="0"
-        android:text="비밀번호 확인"
-        android:textAlignment="textStart"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:translationX="-760dp"
-        android:translationY="280dp" />
-
-    <FrameLayout
-        android:layout_width="180dp"
-        android:layout_height="70dp"
-        android:layout_weight="0"
-        android:animateLayoutChanges="false"
-        android:background="#6DF870"
-        android:translationX="-795dp"
-        android:translationY="335dp">
-
-        <FrameLayout
-            android:layout_width="164dp"
-            android:layout_height="50dp"
-            android:animateLayoutChanges="false"
-            android:background="#FFFFFF"
-            android:translationX="8dp"
-            android:translationY="10dp">
-
-            <EditText
-                android:id="@+id/reg_pass_confirm"
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:layout_marginBottom="10dp"
-                android:background="@color/white"
-                android:hint="@string/hint_pass_confirm"
-                android:inputType="textCapWords"
-                android:padding="5dp"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black"
-                android:textSize="14sp" />
-
-        </FrameLayout>
-
-    </FrameLayout>
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="58dp"
-        android:layout_height="40dp"
         android:layout_weight="0"
         android:text="닉네임"
         android:textAlignment="textStart"
         android:textColor="#000000"
         android:textSize="20sp"
-        android:translationX="-1060dp"
-        android:translationY="430dp" />
+        android:translationX="-640dp"
+        android:translationY="400dp" />
 
     <FrameLayout
         android:layout_width="180dp"
@@ -191,8 +133,8 @@
         android:layout_weight="0"
         android:animateLayoutChanges="false"
         android:background="#6DF870"
-        android:translationX="-1033dp"
-        android:translationY="425dp">
+        android:translationX="-640dp"
+        android:translationY="395dp">
 
         <FrameLayout
             android:layout_width="164dp"
@@ -203,7 +145,7 @@
             android:translationY="10dp">
 
             <EditText
-                android:id="@+id/nickname"
+                android:id="@+id/reg_nickcname"
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
@@ -220,18 +162,6 @@
     </FrameLayout>
 
     <Button
-        android:id="@+id/name_confirm"
-        android:layout_width="110dp"
-        android:layout_height="70dp"
-        android:layout_weight="0"
-        android:backgroundTint="#6DF870"
-        android:text="중복확인"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:translationX="-1025dp"
-        android:translationY="430dp" />
-
-    <Button
         android:id="@+id/register_confirm"
         android:layout_width="200dp"
         android:layout_height="70dp"
@@ -241,7 +171,7 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18sp"
-        android:translationX="-1330dp"
-        android:translationY="530dp" />
+        android:translationX="-830dp"
+        android:translationY="500dp" />
 
 </LinearLayout>
